--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,10 @@ project(PurLong)
 set(CMAKE_CXX_STANDART 17)
 set(CMAKE_CXX_STANDART_REQUIRED True)
 
-add_executable(autoTests src/purlong.cpp 
-tests/mainTest.cpp tests/comparisionsTest.cpp tests/arithmeticOperationsTest.cpp
+add_executable(autoTests 
+src/purlong.cpp 
+src/purmath.cpp
+tests/mainTest.cpp 
+tests/comparisionsTest.cpp 
+tests/arithmeticOperationsTest.cpp
 tests/representationTest.cpp)
